# WorldMiniApp_MCP

./: Dockerfile  README.md  pyproject.toml  requirements.txt
worldBuilder/: mcp_builder.py  minikit_build_docs.py  uikit_build_docs.py
worldBuilder/docs/minikit/: llms_full_minikit.txt  sklearn_vectorstore_minikit.parquet
worldBuilder/docs/uikit/: explanations_uikit.json  failed_docs_uikit.json  sklearn_vectorstore_uikit.parquet
worldChain-MCP/: mcp-worldChain.json  sklearn_vectorstore.parquet  worldChain_build_docs.py  worldChain_mcp.py
worldID-MCP/: llms_full.txt  mcp-worldID.json  sklearn_vectorstore.parquet  worldID_build_docs.py  worldID_mcp.py
worldMiniApp-MCP/: llms_full.txt  mcp-miniApp.json  miniApp_build_docs.py  miniApp_mcp.py
worldMiniKit-js-MCP/: llms_full.txt  mcp-miniApp.json  miniApp_build_docs.py  minikit_build_docs.py  minikit_mcp.py  sklearn_vectorstore.parquet  worldkit.md
worldUI-MCP/: llms_full.txt  mcp-worldUI.json  sklearn_vectorstore.parquet  worldUI_build_docs.py  worldUI_mcp.py  worldcoin-mini-apps-ui-kit.txt
